# xv6-k210

./: .gitignore  LICENSE  Makefile  README.md  README_cn.md  fs.sh  tags
bootloader/SBI/: rustsbi-k210  rustsbi-k210-bak  rustsbi-qemu  sbi  sbi-k210  sbi-qemu
bootloader/SBI/rustsbi-k210/: Cargo.toml  README.md  build.rs  justfile  link-k210.ld
bootloader/SBI/rustsbi-k210/src/: console.rs  main.back.rs  main.rs  serial.rs
bootloader/SBI/rustsbi-qemu/: Cargo.toml  README.md  build.rs  justfile  link-qemu.ld  rust-toolchain
bootloader/SBI/rustsbi-qemu/src/: hal.rs  main.rs
bootloader/SBI/rustsbi-qemu/src/hal/: clint.rs  ns16550a.rs
debug/openocd_cfg/: ft2232c.cfg  k210.cfg  openocd_ftdi.cfg
doc/: boot.md  fs.md  memory.md  proc.md  report_2020_12_26.md  report_2020_12_26_simple.md  rustsbi.md  s_extern_interrupt.md  sdcard.md  syscall.md  timer.md  xv6-k210-report-车春池.md  内核原理-系统调用.md  内核原理-进程管理.md  构建调试-SD卡驱动v2.md  构建调试-外部中断.md  构建调试-外部中断v2.md  构建调试-文件系统.md  构建调试-系统调用.md  构建调试-调试指南.md  用户使用-内存管理.md  用户使用-文件系统.md  用户使用-系统调用.md
kernel/: .sdcard.c.swp  _console.c  bio.c  console.c  defs.h  disk.c  disk_virtio.c  dmac.c  entry_k210.S  entry_qemu.S  exec.c  fat32.c  file.c  fpioa.c  fs.c  gpiohs.c  imgfs.c  interrupt.S  intr.c  kalloc.c  kmalloc.c  log.c  logo.c  main.c  memlayout.h  param.h  pipe.c  platform.c  plic.c  pm.c  printf.c  proc.c  riscv.h  sbi.c  sbi.h  sdcard.c  sdcard.example.c  sleeplock.c  spi.back.c  spi.c  (+19 more)
kernel/include/: buf.h  console.h  debug.h  defs.h  disk.h  dmac.h  elf.h  encoding.h  fat32.h  fcntl.h  file.h  fpioa.h  fs.h  gpiohs.h  intr.h  kalloc.h  kmalloc.h  memlayout.h  param.h  pipe.h  plic.h  pm.h  printf.h  proc.h  riscv.h  sbi.h  sdcard.example.h  sdcard.h  sleeplock.h  spi.example.h  spi.h  spinlock.h  stat.h  string.h  syscall.h  sysctl.h  sysinfo.h  sysnum.h  (+7 more)
linker/: k210.ld  qemu.ld  user.ld  xv6.ld
mkfs/: mkfs.c
xv6-user/: _test  cat.c  cowtest.c  echo.c  find.c  forktest.c  grep.c  grind.c  info.c  init.c  init2.c  initcode.S  kill.c  lazytests.c  ln.c  ls.c  mkdir.c  mount.c  mv.c  printf.c  rm.c  sh.c  shrc  sleep.c  strace.c  stressfs.c  test.c  testcode_1.S  testcode_2.S  testcode_3.S  testcode_4.S  trace.c  ulib.c  umalloc.c  umount.c  user.h  usertests.c  usys.pl  wc.c  xargs.c  (+2 more)
